@@ -37,6 +37,7 @@ public class RealmSourceCodeGenerator {
     private String className;
     private String packageName;
     private List<VariableElement> fields;
+    private static final String realmPackageName = "io.realm";
 
     public RealmSourceCodeGenerator(ProcessingEnvironment processingEnvironment, String className, String packageName, List<VariableElement> fields) {
         this.processingEnvironment = processingEnvironment;
@@ -165,30 +166,34 @@ public class RealmSourceCodeGenerator {
     }
 
     private static final Map<String, Integer> HOW_TO_EQUAL;
+    private static final int equals_direct = 0;  // compare values directly
+    private static final int equals_null = 1;    // check for null
+    private static final int equals_array = 2;   // compare using array
+    private static final int equals_compare = 3; // use the compare method
 
     static {
         HOW_TO_EQUAL = new HashMap<String, Integer>();
-        HOW_TO_EQUAL.put("boolean", 0);  // compare values directly
-        HOW_TO_EQUAL.put("byte", 0);
-        HOW_TO_EQUAL.put("short", 0);
-        HOW_TO_EQUAL.put("int", 0);
-        HOW_TO_EQUAL.put("long", 0);
-        HOW_TO_EQUAL.put("float", 3); // compare using compare method
-        HOW_TO_EQUAL.put("double", 3);
-        HOW_TO_EQUAL.put("Byte", 0);
-        HOW_TO_EQUAL.put("Short", 0);
-        HOW_TO_EQUAL.put("Integer", 0);
-        HOW_TO_EQUAL.put("Long", 0);
-        HOW_TO_EQUAL.put("Float", 0);
-        HOW_TO_EQUAL.put("Double", 0);
-        HOW_TO_EQUAL.put("Boolean", 0);
-        HOW_TO_EQUAL.put("java.lang.String", 1); // check for null
-        HOW_TO_EQUAL.put("java.util.Date", 1);
-        HOW_TO_EQUAL.put("byte[]", 2); // compare using array
+        HOW_TO_EQUAL.put("boolean", equals_direct);
+        HOW_TO_EQUAL.put("byte", equals_direct);
+        HOW_TO_EQUAL.put("short", equals_direct);
+        HOW_TO_EQUAL.put("int", equals_direct);
+        HOW_TO_EQUAL.put("long", equals_direct);
+        HOW_TO_EQUAL.put("float", equals_compare);
+        HOW_TO_EQUAL.put("double", equals_compare);
+        HOW_TO_EQUAL.put("Byte", equals_direct);
+        HOW_TO_EQUAL.put("Short", equals_direct);
+        HOW_TO_EQUAL.put("Integer", equals_direct);
+        HOW_TO_EQUAL.put("Long", equals_direct);
+        HOW_TO_EQUAL.put("Float", equals_direct);
+        HOW_TO_EQUAL.put("Double", equals_direct);
+        HOW_TO_EQUAL.put("Boolean", equals_direct);
+        HOW_TO_EQUAL.put("java.lang.String", equals_null); // check for null
+        HOW_TO_EQUAL.put("java.util.Date", equals_direct);
+        HOW_TO_EQUAL.put("byte[]", equals_array); // compare using array
     }
 
     public void generate() throws IOException, UnsupportedOperationException {
-        String qualifiedGeneratedClassName = String.format("%s.%sRealmProxy", packageName, className);
+        String qualifiedGeneratedClassName = String.format("%s.%sRealmProxy", realmPackageName, className);
         JavaFileObject sourceFile = processingEnvironment.getFiler().createSourceFile(qualifiedGeneratedClassName);
         JavaWriter writer = new JavaWriter(new BufferedWriter(sourceFile.openWriter()));
 
@@ -201,7 +206,7 @@ public class RealmSourceCodeGenerator {
         // Set source code indent to 4 spaces
         writer.setIndent("    ");
 
-        writer.emitPackage(packageName)
+        writer.emitPackage(realmPackageName)
                 .emitEmptyLine();
 
         writer.emitImports(
@@ -212,7 +217,8 @@ public class RealmSourceCodeGenerator {
                 "io.realm.internal.LinkView",
                 "io.realm.RealmList",
                 "io.realm.RealmObject",
-                "java.util.Date")
+                "java.util.Date",
+                packageName + ".*")
                 .emitEmptyLine();
 
         // Begin the class definition
@@ -349,7 +355,7 @@ public class RealmSourceCodeGenerator {
                         fieldName.toLowerCase(Locale.getDefault()));
             } else if (typeUtils.isAssignable(field.asType(), realmObject)) {
                 writer.beginControlFlow("if (!transaction.hasTable(\"%s\"))", fieldTypeName);
-                writer.emitStatement("%sRealmProxy.initTable(transaction)", fieldTypeCanonicalName);
+                writer.emitStatement("%sRealmProxy.initTable(transaction)", fieldTypeName);
                 writer.endControlFlow();
                 writer.emitStatement("table.addColumnLink(ColumnType.LINK, \"%s\", transaction.getTable(\"%s\"))",
                         fieldName.toLowerCase(Locale.getDefault()), fieldTypeName);
@@ -362,7 +368,7 @@ public class RealmSourceCodeGenerator {
                     genericType = genericCanonicalType;
                 }
                 writer.beginControlFlow("if (!transaction.hasTable(\"%s\"))", genericType);
-                writer.emitStatement("%sRealmProxy.initTable(transaction)", genericCanonicalType);
+                writer.emitStatement("%sRealmProxy.initTable(transaction)", genericType);
                 writer.endControlFlow();
                 writer.emitStatement("table.addColumnLink(ColumnType.LINK_LIST, \"%s\", transaction.getTable(\"%s\"))",
                         fieldName.toLowerCase(Locale.getDefault()), genericType);
@@ -443,33 +449,36 @@ public class RealmSourceCodeGenerator {
             String fieldName = field.getSimpleName().toString();
             String capFieldName = capitaliseFirstChar(fieldName);
             String fieldTypeCanonicalName = field.asType().toString();
-            switch (HOW_TO_EQUAL.get(fieldTypeCanonicalName)) {
-                case 0: // if (getField() != aFoo.getField()) return false
-                    writer.emitStatement("if (get%s() != a%s.get%s()) return false", capFieldName, className, capFieldName);
-                    break;
-                case 1: // if (getField() != null = !getField().equals(aFoo.getField()) : aFoo.getField() != null) return false
+            if (HOW_TO_EQUAL.containsKey(fieldTypeCanonicalName)) {
+                switch (HOW_TO_EQUAL.get(fieldTypeCanonicalName)) {
+                    case equals_direct: // if (getField() != aFoo.getField()) return false
+                        String getterPrefix = fieldTypeCanonicalName.equals("boolean") ? "is" : "get";
+                        writer.emitStatement("if (get%s() != a%s.%s%s()) return false", capFieldName, className, getterPrefix, capFieldName);
+                        break;
+                    case equals_null: // if (getField() != null = !getField().equals(aFoo.getField()) : aFoo.getField() != null) return false
+                        writer.emitStatement("if (get%s() != null ? !get%s().equals(a%s.get%s()) : a%s.get%s() != null) return false",
+                                capFieldName,
+                                capFieldName, className, capFieldName,
+                                className, capFieldName);
+                        break;
+                    case equals_array: // if (!Array.equals(getField(), aFoo.getField()) return false
+                        writer.emitStatement("if (!Array.equals(get%s(), a%s.get%s()) return false",
+                                capFieldName,
+                                className, capFieldName);
+                        break;
+                    case equals_compare:
+                        writer.emitStatement("if (%s.compare(get%s, a%s.get%s) != 0) return false", capitaliseFirstChar(fieldName), className, capitaliseFirstChar(fieldName));
+                        break;
+                }
+            }
+            else {
+                if (typeUtils.isAssignable(field.asType(), realmObject) || typeUtils.isAssignable(field.asType(), realmList)) {
                     writer.emitStatement("if (get%s() != null ? !get%s().equals(a%s.get%s()) : a%s.get%s() != null) return false",
                             capFieldName,
                             capFieldName, className, capFieldName,
                             className, capFieldName);
-                    break;
-                case 2: // if (!Array.equals(getField(), aFoo.getField()) return false
-                    writer.emitStatement("if (!Array.equals(get%s(), a%s.get%s()) return false",
-                            capFieldName,
-                            className, capFieldName);
-                    break;
-                case 3:
-                    writer.emitStatement("if (%s.compare(get%s, %s.get%s) != 0) return false", capitaliseFirstChar(fieldName), className, capitaliseFirstChar(fieldName));
-                    break;
-            }
 
-            // TODO: Can object and list be added to HOW_TO_EQUAL?
-            if (typeUtils.isAssignable(field.asType(), realmObject) || typeUtils.isAssignable(field.asType(), realmList)) {
-                writer.emitStatement("if (get%s() != null ? !get%s().equals(%s.get%s()) : %s.get%s() != null) return false",
-                        capFieldName,
-                        capFieldName, className, capFieldName,
-                        className, capFieldName);
-
+                }
             }
         }
         writer.emitStatement("return true");
