@@ -4,6 +4,7 @@ Beta-0.3.0
   =======
 
   * Renaming beginWrite to beginTransaction and commit to commitTransaction
+  * Adding equals to generated classes (RealmObjects)
 
   Bug Fixes
   =========
